alterar versao java para 8 (compatibilidade com build maven plugin)