@@ -20,9 +20,11 @@ import org.springframework.data.domain.PageImpl;
 import org.springframework.data.domain.PageRequest;
 import org.springframework.data.domain.Pageable;
 
+import java.util.Arrays;
 import java.util.List;
 import java.util.Optional;
 
+import static java.util.stream.Collectors.toList;
 import static org.junit.jupiter.api.Assertions.assertEquals;
 import static org.junit.jupiter.api.Assertions.assertNotNull;
 import static org.junit.jupiter.api.Assertions.assertThrows;
@@ -83,11 +85,11 @@ class AssembleiaServiceTest {
         entity2.setId(2L);
         entity2.getLocal().setId(2L);
         PageRequest pageable = PageRequest.of(0, 2);
-        List<Assembleia> assembleiaList = List.of(entity1, entity2);
+        List<Assembleia> assembleiaList = Arrays.asList(entity1, entity2);
         PageImpl<Assembleia> pageResponse = new PageImpl<>(assembleiaList, pageable, assembleiaList.size());
         when(assembleiaRepository.findAll(any(Pageable.class))).thenReturn(pageResponse);
         Page<AssembleiaResponse> response = assembleiaService.pesquisar(pageable);
-        List<Long> idsAssembleias = response.stream().map(AssembleiaResponse::getId).toList();
+        List<Long> idsAssembleias = response.stream().map(AssembleiaResponse::getId).collect(toList());
         assertEquals(response.getPageable().getPageNumber(), pageable.getPageNumber());
         assertEquals(response.getPageable().getPageSize(), pageable.getPageSize());
         assertEquals(idsAssembleias.size(), 2);
